# op-etl

./: .gitignore  BBOX_ENHANCEMENT_SUMMARY.md  README.md  SIMPLIFICATION_PROGRESS.md  config.yaml  demo_oid_sweep.py  download.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run.py.backup  sources.yaml  test_bbox_functionality.py  test_rest_pagination.py
.github/: copilot-instructions.md  dependabot.yml
config/: MIGRATION.md  README.md  config.yaml  config_migrated.yaml  config_v2.yaml  migrate_config.py  sources.yaml
config/legacy/: sources.yaml
docs/: arcgis-python-libs.md  enhanced-staging-demo.md  example-oid-sweep-config.yaml  improvements.md  logging-configuration.md  oid-batch-parallelism.md  recursion-error-solutions.md  spatial-reference-consistency.md
docs/examples/: name_handling.md
docs/improvements/: Plan review.md  actionable-task-list.md  improvements.md
docs/techical_desc/: 1-download.md
docs/technical_desc/: 1-download.md
etl/: __init__.py  config.py  config_v2.py  download.py  download_atom.py  download_http.py  download_ogc.py  download_rest.py  download_rest_simple.py  download_wfs.py  http_simple.py  http_utils.py  load_sde.py  logging.py  logging_config.py  monitoring.py  new_config.py  ogc_fetch.py  paths.py  process.py  simple_logging.py  sr_utils.py  stage_files.py  stage_simple.py  utils.py  workspace.py
etl/downloaders/: __init__.py  download_atom.py  download_http.py  download_ogc.py  download_rest.py  download_wfs.py
etl/geoprocess/: __init__.py  process.py
etl/legacy/: http_simple.py  utils.py
etl/sde/: __init__.py  load_sde.py
etl/staging/: __init__.py  stage_files.py
etl/utils/: __init__.py  config.py  logging_config.py  monitoring.py  paths.py  utils.py  workspace.py
examples/: resolving_Layer_naming.md  rest_api.py
tests/: test_integration_parallel.py  test_rest_parallel.py
tests/baseline/: baseline_report.md  baseline_results.json  capture_baseline.py
